# mathusla-newsim

./: .gitignore  CMakeLists.txt  README.md  a.out  attach_cosmic.cc  cry.cc  digitizer.cc  gmon.out  install.sh  merge.cc  parma.cc  simulation.cc  test.cpp  tracker.cc  tracker_old.cc
cry_v1.7/src/: CRYSetup.h
data/: run_0.root
include/: MuActionInitialization.hh  MuAnalysis.hh  MuDetectorConstruction.hh  MuEventAction.hh  MuPrimaryGeneratorAction.hh  MuRunAction.hh  MuSteppingAction.hh  util.hh  util_globals.hh  util_root.hh
include/generator/: CRY.hh  PARMA.hh  ParticleGun.hh  Recreate.hh  _Generator.hh
include/generator/parma/: parma_util.hh
include/geometry/: Mathusla40.hh  TestStand_UofT.hh  _GeoBuilder.hh
macros/: init_gui.mac  init_limit.mac  init_vis.mac  plotHisto.C  plotNtuple.C  run2.mac  run_cry.mac  run_gun.mac  run_parma.mac  run_recreate.mac  vis.mac
macros/generators/: cry_all.conf  cry_all.file  cry_default.file  cry_neutron.conf  cry_proton.conf  cry_proton.file  init_cry.mac  init_gun.mac  init_parma.mac  init_recreate.mac  parma_default.conf  parma_default.file  recreate_event_records_example.conf
macros/tracker/: tracker_default.conf
muhelper/: root.py
python/: setup.py
python/simhelper/: datatypes.py  generator.py  helper_basic.py  helper_plt.py  io_pytracker.py  kalma_filter.py  parser.py  root.py  util.py
python/simhelper/data/: flux_table_neutron.joblib  flux_table_proton.joblib
src/: MuActionInitialization.cc  MuAnalysis.cc  MuDetectorConstruction.cc  MuEventAction.cc  MuPrimaryGeneratorAction.cc  MuRunAction.cc  MuSteppingAction.cc  util.cc
src/generator/: CRY.cc  Generator.cc  PARMA.cc  ParticleGun.cc  Recreate.cc  _Generator.cc
src/generator/parma/: parma_subroutines.cc  parma_subroutines.cpp  parma_util.cc  parma_util.cpp
src/geometry/: Mathusla40.cc  README.md  TestStand_UofT.cc  _GeoBuilder.cc
studies/mathusla40/: _submit_dryrun.sh  _submit_series.sh  cut_functions.py  skim_vertex.cc  skim_vertex_old.cc  submit_cosmic_n_p_1-30.sh  submit_skim_merge.sh  submit_skim_merge_cosmic_np.sh  submit_skim_merge_lhcmuon.sh  submit_skim_merge_neutrino.sh  submit_upward_n_p.sh
studies/mathusla40/cosmic_n/: 1.running_neutron_batches.ipynb  2.check_recon_result.ipynb  _start_series_of_run.sh  _start_single_run.sh
studies/mathusla40/cosmic_n/scripts/: cry_neutron_cms_0m.conf  run_cry_mathusla40.mac
studies/mathusla40/cosmic_p/: 1.running_proton_batches.ipynb  10.cut_dev_rhn_mu.ipynb  2.cut_dev-Copy1.ipynb  2.cut_dev-n-v2.ipynb  2.cut_dev-n.ipynb  2.cut_dev.ipynb  2.run_post_processing.ipynb  3.apply_cuts.ipynb  _start_run_series.sh  _start_series_of_run.sh  _start_single_run.sh  log.txt  plot-test.ipynb
studies/mathusla40/cosmic_p/scripts/: parma_cms_511m.conf  run_parma_mathusla40.mac
studies/mathusla40/lhc_muon/: 0.general_description.ipynb  file_list_stat0io_MuSim-noise0.1-layers6-eff0.95.pkl.joblib
studies/mathusla40/llp_hxx/: 10.summary.ipynb  2.run_cut_processing.ipynb  20.data_acquisation_study.ipynb  cry_all_cms_0m.conf  g4_llp_hxx_15_GeV.mac  g4_llp_hxx_25_GeV.mac  g4_llp_hxx_35_GeV.mac  g4_llp_hxx_45_GeV.mac  g4_llp_hxx_55_GeV.mac  g4_llp_hxx_example.mac  info_a_2track.csv  info_a_3track.csv  info_b_2track.csv  info_b_3track.csv  run_cry_all_mathusla40.mac  run_llp_hxx.sh
studies/mathusla40/llp_rhn_mu/: 0.simulation_preparation.ipynb  g4_filereader.mac
studies/mathusla40/llp_rhnmu_sms/: 0.simulation_preparation.ipynb  10.cut_dev_rhn_mu.ipynb  2.run_cut_processing.ipynb  info_a_2track_rnhmu.csv  info_a_2track_sms.csv  info_b_2track_rnhmu.csv  info_b_2track_sms.csv  run_llp_secondary.sh
studies/mathusla40/trigger/: 1.basic.ipynb  g4config_cry_all_mathusla40_abstime.mac  run_cosmic_all.sh
studies/mathusla40/upward_n_and_p/: _start_single_run.sh  upward_vertices.ipynb
studies/mathusla40/upward_n_and_p/scripts/: README.md  run_gun.mac
tests/basic/: run_cry_mathusla40.mac
tests/cosmic_generator/: compare_mceq_neutron.ipynb  compare_mceq_proton.ipynb  compare_parma_cry.ipynb  cosmic_mceq_generator.ipynb  cry_neutron_cms_0m-large.conf  cry_neutron_cms_0m.conf  cry_neutron_durham.conf  cry_proton_cms_0m.conf  cry_proton_durham.conf  neutron_100TeV.root  parma_cms_0m.conf  parma_cms_511m.conf  parma_durham.conf  run_filereader_cosmic.mac  run_mceq.py  run_parma_cry.ipynb
tests/cosmic_generator/.ipynb_checkpoints/: run_parma_cry-checkpoint.ipynb
tests/filereader_generator/: check_recon.ipynb  make_llp.ipynb  run_filereader-25GeV.mac  run_recreate.mac
tests/mathusla40/: 1.geometry_and_digitizer.ipynb  2.running_proton_batches.ipynb  parma_config_mathusla40.conf  run_cry_mathusla40.mac  run_gun_mathusla40.mac  run_parma_mathusla40.mac
tracker/: kalman.cc  kalman.hh  kalman_model.cc  kalman_model.hh  track_finder.cc  track_finder.hh  types.cc  types.hh  types_and_helper.cc  types_and_helper.hh  vertex_finder.cc  vertex_finder.hh
tracker/tests/: test0_track_kf_fit.cc  test1_track_kf_find.cc  test3_vertex_fits.cc  test4_vertex_find.cc  test_kalman.cc  test_kalman_model.cc  test_track_finder.cc  test_util.cc  test_util.hh  test_vertex_ls_fit.cc
tracker/tests/root_entry_copy/: CopyTreeBranches  CreateSampleTree.C  makefile  test_copy.cc
